# IOMonitorDemo

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bhook_demo.cpp  mmap_demo.cpp  native-lib.cpp
app/src/main/java/com/lanshifu/iomonitordemo/: CloseGuardHooker.kt  IOCanaryJniBridge.java  IOCloseLeakDetector.java  IOMonitor.kt  MainActivity.kt  MainApplication.kt  MmapDemo.kt
app/src/main/java/com/lanshifu/iomonitordemo/bhook/: BHookSdk.kt
app/src/main/java/com/lanshifu/iomonitordemo/matrix/: DynamicConfigImplDemo.java  MatrixInit.java  TestPluginListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: sanitizer.gradle
gradle/wrapper/: gradle-wrapper.properties
